Enhance custom .m2 path handling - Updated configuration to accept a user-defined path - Store downloaded JARs in blackduck/run directory - Added variable to track paths of located and downloaded JARs